Imported from util-linux-2.13-pre7 tarball.

--- a/AUTHORS
+++ b/AUTHORS
@@ -1,5 +1,6 @@
 Maintainer: Adrian Bunk <bunk@stusta.de>
 
+Maintainer of flock: H. Peter Anvin <hpa@zytor.com>
 Maintainer of getopt: Frodo Looijaard <frodol@dds.nl>
 Maintainer of schedutils: Robert Love <rlove@rlove.org>
 Maintainer of simpleinit: Richard Gooch <rgooch@atnf.csiro.au>
