--- a/sys-utils/flock.1
+++ b/sys-utils/flock.1
@@ -1,7 +1,7 @@
-.\" $Id: flock.1,v 1.2 2005/07/09 21:34:44 hpa Exp $
+.\" $Id: flock.1,v 1.3 2006/02/04 20:41:57 hpa Exp $
 .\" -----------------------------------------------------------------------
 .\"   
-.\"   Copyright 2003 H. Peter Anvin - All Rights Reserved
+.\"   Copyright 2003-2006 H. Peter Anvin - All Rights Reserved
 .\"
 .\"   Permission is hereby granted, free of charge, to any person
 .\"   obtaining a copy of this software and associated documentation
@@ -25,7 +25,7 @@
 .\"   OTHER DEALINGS IN THE SOFTWARE.
 .\"
 .\" -----------------------------------------------------------------------
-.TH FLOCK "1" "17 Mar 2003" "flock utility" "H. Peter Anvin"
+.TH FLOCK "1" "4 Feb 2006" "flock utility" "H. Peter Anvin"
 .SH NAME
 flock \- Manage locks from shell scripts
 .SH SYNOPSIS
@@ -69,7 +69,7 @@ waits until the lock is available.
 \fB\-s\fP, \fB\-\-shared\fP
 Obtain a shared lock, sometimes called a read lock.
 .TP
-\fB\-x\fP, \fB\-\-exclusive\fP
+\fB\-x\fP, \fB\-e\fP, \fB\-\-exclusive\fP
 Obtain an exclusive lock, sometimes called a write lock.  This is the
 default.
 .TP
@@ -80,11 +80,11 @@ required in special cases, for example if the enclosed command group
 may have forked a background process which should not be holding the
 lock.
 .TP
-\fB\-n\fP, \fB\-\-nonblock\fP
+\fB\-n\fP, \fB\-\-nb\fP, \fB\-\-nonblock\fP
 Fail (with an exit code of 1) rather than wait if the lock cannot be
 immediately acquired.
 .TP
-\fB\-w\fP, \fB\-\-timeout\fP \fIseconds\fP
+\fB\-w\fP, \fB\-\-wait\fP, \fB\-\-timeout\fP \fIseconds\fP
 Fail (with an exit code of 1) if the lock cannot be acquired within
 \fIseconds\fP seconds.  Decimal fractional values are allowed.
 .TP
@@ -93,12 +93,15 @@ Close the file descriptor on which the lock is held before executing
 \fIcommand\fP.  This is useful if \fIcommand\fP spawns a child process
 which should not be hold ing the lock.
 .TP
+\fB\-c\fP, \fB\-\-command\fP \fIcommand\fP
+Pass a single \fIcommand\fP to the shell with \fB\-c\fP.
+.TP
 \fB\-h\fP, \fB\-\-help\fP
 Print a help message.
 .SH AUTHOR
 Written by H. Peter Anvin <hpa@zytor.com>.
 .SH COPYRIGHT
-Copyright \(co 2003\-2005 H. Peter Anvin.
+Copyright \(co 2003\-2006 H. Peter Anvin.
 .br
 This is free software; see the source for copying conditions.  There is NO
 warranty; not even for MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
