--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,7 @@
+util-linux-ng 2.13devel
+
+* <TODO: the changelog will be generated from git>
+
 util-linux 2.13-pre7
 
 * mount: default to cifs instead of smbfs for sources
