--- a/po/de.po
+++ b/po/de.po
@@ -43,8 +43,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: util-linux 2.13-pre6\n"
-"Report-Msgid-Bugs-To: Adrian Bunk <bunk@stusta.de>\n"
-"POT-Creation-Date: 2006-03-06 00:12+0100\n"
+"Report-Msgid-Bugs-To: Karel Zak <kzak@redhat.com>\n"
+"POT-Creation-Date: 2007-01-04 13:19+0100\n"
 "PO-Revision-Date: 2005-12-05 15:45+0100\n"
 "Last-Translator: Michael Piefel <piefel@informatik.hu-berlin.de>\n"
 "Language-Team: German <translation-team-de@lists.sourceforge.net>\n"
