--- a/po/pt_BR.po
+++ b/po/pt_BR.po
@@ -13,8 +13,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: util-linux 2.11b\n"
-"Report-Msgid-Bugs-To: Adrian Bunk <bunk@stusta.de>\n"
-"POT-Creation-Date: 2006-03-06 00:12+0100\n"
+"Report-Msgid-Bugs-To: Karel Zak <kzak@redhat.com>\n"
+"POT-Creation-Date: 2007-01-04 13:19+0100\n"
 "PO-Revision-Date: 2001-05-24 16:03-03:00\n"
 "Last-Translator: Rodrigo Stulzer Lopes <rodrigo@conectiva.com.br>\n"
 "Language-Team: Brazilian Portuguese <ldp-br@bazar.conectiva.com.br>\n"
