--- a/po/sl.po
+++ b/po/sl.po
@@ -12,8 +12,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: util-linux 2.13-pre6\n"
-"Report-Msgid-Bugs-To: Adrian Bunk <bunk@stusta.de>\n"
-"POT-Creation-Date: 2006-03-06 00:12+0100\n"
+"Report-Msgid-Bugs-To: Karel Zak <kzak@redhat.com>\n"
+"POT-Creation-Date: 2007-01-04 13:19+0100\n"
 "PO-Revision-Date: 2006-03-05 12:29+0200\n"
 "Last-Translator: Simon Mihevc <simonmihevc@email.si>\n"
 "Language-Team: Slovenian <translation-team-sl@lists.sourceforge.net>\n"
