schedutils: remove extra hyptens from man pages
Signed-off-by: Karel Zak <kzak@redhat.com>

--- a/schedutils/chrt.1
+++ b/schedutils/chrt.1
@@ -72,7 +72,7 @@ output version information and exit
 .SH USAGE
 .TP
 The default behavior is to run a new command::
-chrt [prio] -- [command] [arguments]
+chrt [prio] [command] [arguments]
 .TP
 You can also retrieve the real-time attributes of an existing task:
 chrt -p [pid]
