--- a/schedutils/taskset.1
+++ b/schedutils/taskset.1
@@ -82,7 +82,7 @@ output version information and exit
 .SH USAGE
 .TP
 The default behavior is to run a new command with a given affinity mask:
-taskset [mask] -- [command] [arguments]
+taskset [mask] [command] [arguments]
 .TP
 You can also retrieve the CPU affinity of an existing task:
 taskset -p [pid]
