losetup: add -a option to list all used loop devices
Signed-off-by: Karel Zak <kzak@redhat.com>

--- a/mount/losetup.8
+++ b/mount/losetup.8
@@ -9,6 +9,8 @@ Get info:
 .B losetup
 .I loop_device
 .sp
+.B losetup -a
+.sp
 .in -5
 Delete loop:
 .sp
@@ -66,6 +68,8 @@ option, or one uses a name with the
 .B \-e
 option.)
 .SH OPTIONS
+.IP \fB\-a\fP
+Show status of all loop devices.
 .IP \fB\-d\fP
 Detach the file or device associated with the specified loop device.
 .IP "\fB\-E \fIencryption_type\fP"
