losetup: add to man page info about deprecated cryptoloop
Signed-off-by: Karel Zak <kzak@redhat.com>

--- a/mount/losetup.8
+++ b/mount/losetup.8
@@ -136,6 +136,9 @@ the command
 .fi
 .SH RESTRICTION
 DES encryption is painfully slow. On the other hand, XOR is terribly weak.
+
+Cryptoloop is deprecated in favor of dm-crypt. For more details see
+.B cryptsetup(8).
 .\" .SH AUTHORS
 .\" .nf
 .\" Original version: Theodore Ts'o <tytso@athena.mit.edu>
