todo: add request for cal highlight control option
Signed-off-by: Karel Zak <kzak@redhat.com>

--- a/TODO
+++ b/TODO
@@ -20,6 +20,8 @@
 
 - rewrite the replay script to C to avoid dependence on perl
 
+- add an option to the cal command to control highlight date
+  (cal -v YYYY/MM/DD)
 
 2.14:
 ====
