schedutils: define SCHED_BATCH when compile with old glibc
This is temporary workaround and it will be removed in 2.14 when
minimal number of people will use old systems where is not defined
SCHED_BATCH in (bits/)sched.h.

Signed-off-by: Karel Zak <kzak@redhat.com>

--- a/TODO
+++ b/TODO
@@ -30,3 +30,6 @@
 
 - rewrite ipcs to use /proc/sys/kernel rather than unreliable syscalls
   (there are problems with 32bit userspace on 64bit kernel)
+
+- remove support for old system headers (like missing ioctls, ..)
+	 * check for SCHED_BATCH in the configure script
