--- a/AUTHORS
+++ b/AUTHORS
@@ -2,25 +2,37 @@
                             utils-linux-ng
            (fork of util-linux, based on version 2.13-pre7)
 
-MAINTAINERS:
+MAINTAINER:
       
       Karel Zak <kzak@redhat.com> 
 
-      Maintainer of flock:           H. Peter Anvin <hpa@zytor.com>
-      Maintainer of getopt:          Frodo Looijaard <frodol@dds.nl>
-      Maintainer of schedutils:      Robert Love <rlove@rlove.org>
-      Maintainer of simpleinit:      Richard Gooch <rgooch@atnf.csiro.au>
 
 PAST MAINTAINERS:
 
-      Maintainer of util-linux:      Adrian Bunk <bunk@stusta.de> 
-      Maintainer of util-linux:      Andries E. Brouwer <aeb@cwi.nl>
+      Adrian Bunk <bunk@stusta.de> 
+      Andries E. Brouwer <aeb@cwi.nl>
+
+
+AUTHORS:
+
+      flock:           H. Peter Anvin <hpa@zytor.com>
+      getopt:          Frodo Looijaard <frodol@dds.nl>
+      schedutils:      Robert Love <rlove@rlove.org>
+      simpleinit:      Richard Gooch <rgooch@atnf.csiro.au>
+      hwclock:         Bryan Henderson <bryanh@giraffe-data.com>
 
 
 CONTRIBUTORS:
 
-      Bryan Henderson <bryanh@giraffe-data.com>
-            - original author of hwclock 
+      Stepan Kasal <skasal@redhat.com>
+      Mike Frysinger <vapier@gentoo.org>
+      Martin Schlemmer <azarah@gentoo.org>
+      Valerie Henson <val_henson@linux.intel.com>
+      Matthias Koenig <mkoenig@suse.de>
+      Ram Pai <linuxram@us.ibm.com>
+      Steve Grubb <sgrubb@redhat.com>
+      David Brownell <david-b@pacbell.net>
+      Jason Vas Dias <jvdias@redhat.com>
+      Marco d'Itri <md@Linux.IT>
+      Kay Sievers <kay.sievers@vrfy.org> 
 
-
-      <your name>   <--- send a patch
