tests: add ts_log and --verbose support
Signed-off-by: Karel Zak <kzak@redhat.com>

--- a/tests/README
+++ b/tests/README
@@ -8,9 +8,9 @@
 
  Run all tests:
 
-	./run.sh
+	./run.sh [--verbose]
 
  Run one tests:
 
-	./ts-<component_name>-<test_name>.sh
+	./ts-<component_name>-<test_name>.sh [--verbose]
 
