--- a/tests/README
+++ b/tests/README
@@ -14,3 +14,9 @@
 
 	./ts-<component_name>-<test_name>.sh [--verbose]
 
+
+
+ *** WARNING ***
+
+ The tests touch your /etc/fstab and /etc/blkid.tab. Please, be careful and use
+ these tests only for development and never on production system.
